# MathsPhysiqueJV

./: .clang-format  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  MathsPhysique.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
MathsPhysique/MathsPhysique/: Vector3D.cpp  Vector3D.h
cmake/: MathsPhysiqueHelper.cmake
doc/: buildOgreWCMake.txt  uml.drawio
doc/uml/: uml.drawio  uml2.drawio  umlPhase4.drawio
res/shaders/: basic.shader
src/: CMakeLists.txt  GameEngine.cpp  GameEngine.hpp  MathsPhysique.vcxproj  MathsPhysique.vcxproj.filters  Particle.cpp  Particle.hpp  Projectile.hpp  Scene.cpp  Scene.hpp  Vector3D.cpp  Vector3D.hpp  cmake_install.cmake  main.cpp  mainEngine.cpp  test.cpp
src/API/: CMakeLists.txt  ParticleMeshRegistry.hpp
src/API/API/: ParticleMeshRegistry.cpp  ParticleMeshRegistry.hpp  PhysicsObjectMeshRegistry.cpp  PhysicsObjectMeshRegistry.hpp  ScenesAPI.cpp  ScenesAPI.hpp  UserInterface.cpp  UserInterface.hpp
src/PhysicsEngine/: Bullet.cpp  Bullet.hpp  CMakeLists.txt  Fireball.cpp  Fireball.hpp  GameEngine.cpp  GameEngine.hpp  Laser.cpp  Laser.hpp  Particle.cpp  Particle.hpp  ParticleAnchoredSpring.cpp  ParticleAnchoredSpring.hpp  ParticleBungeeSpring.cpp  ParticleBungeeSpring.hpp  ParticleBuoyancy.cpp  ParticleBuoyancy.hpp  ParticleCable.cpp  ParticleCable.hpp  ParticleContact.cpp  ParticleContact.hpp  ParticleContactGenerator.hpp  ParticleContactResolver.cpp  ParticleContactResolver.hpp  ParticleDrag.cpp  ParticleDrag.hpp  ParticleForceGenerator.hpp  ParticleForceRegistry.cpp  ParticleForceRegistry.hpp  ParticleGravity.cpp  ParticleGravity.hpp  ParticleLink.hpp  ParticleRod.cpp  ParticleRod.hpp  ParticleSpring.cpp  ParticleSpring.hpp  Projectile.cpp  Projectile.hpp  Scene.cpp  Scene.hpp  (+3 more)
src/PhysicsEngine/DebugUtils/: ParticlePrinter.hpp
src/PhysicsEngine/PhysicsEngine/: BVH.cpp  BVH.hpp  BoundingPlan.cpp  BoundingPlan.hpp  BoundingSphere.cpp  BoundingSphere.hpp  BoundingVolume.cpp  BoundingVolume.hpp  BoundingVolumeCreator.cpp  BoundingVolumeCreator.hpp  Box.cpp  Box.hpp  Bullet.cpp  Bullet.hpp  CableSpring.cpp  CableSpring.hpp  Fireball.cpp  Fireball.hpp  ForceGenerator.hpp  ForceRegistry.cpp  ForceRegistry.hpp  GameEngine.cpp  GameEngine.hpp  Laser.cpp  Laser.hpp  Matrix33.cpp  Matrix33.hpp  Matrix34.cpp  Matrix34.hpp  Particle.cpp  Particle.hpp  ParticleAnchoredSpring.cpp  ParticleAnchoredSpring.hpp  ParticleBungeeSpring.cpp  ParticleBungeeSpring.hpp  ParticleBuoyancy.cpp  ParticleBuoyancy.hpp  ParticleCable.cpp  ParticleCable.hpp  ParticleContact.cpp  (+50 more)
src/PhysicsEngine/PhysicsEngine/DebugUtils/: ParticlePrinter.cpp  ParticlePrinter.hpp  RigidBodyPrinter.cpp  RigidBodyPrinter.hpp
src/Render/: CMakeLists.txt  Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  RenderedMesh.cpp  RenderedMesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UserInterface.cpp  UserInterface.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  Window.cpp  Window.hpp
src/Render/Render/: Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  RenderedMesh.cpp  RenderedMesh.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  Window.cpp  Window.hpp
src/Render/Render/Data/: OBJReader.cpp  OBJReader.hpp
src/Render/Render/DebugUtils/: RenderedMeshPrinter.cpp  RenderedMeshPrinter.hpp
src/Render/Render/Mesh/: MeshModel.hpp  Plan.cpp  Plan.hpp  Pyramid.cpp  Pyramid.hpp
src/apps/: CMakeLists.txt  main.cpp  mainPhase1.cpp  testSpring.cpp
src/apps/mainApp1/: UserInterface.cpp  UserInterface.hpp  mainPhase1.cpp
src/apps/mainApp2/: UserInterface.cpp  UserInterface.hpp  mainPhase2.cpp
src/apps/mainApp3/: UserInterface.cpp  mainPhase3.cpp  testMatrix.cpp
src/apps/mainApp3_2/: UserInterface.cpp  UserInterface.hpp  mainPhase3_2.cpp
src/apps/mainApp4/: UserInterface.cpp  UserInterface.hpp  mainPhase4.cpp
src/apps/others/: test.cpp
src/apps/testSpring/: testSpring.cpp
src/apps/testWall/: testWall.cpp
src/apps/testsPhase3/: testMatrix.cpp  testRender.cpp
src/headers/: Laser.hpp  Projectile.hpp  Vector3D.hpp
src/sources/: Bullet.cpp  Fireball.cpp  GameEngine.cpp  Laser.cpp  Particle.cpp  Projectile.cpp  Scene.cpp  Vector3D.cpp  main.cpp  test.cpp
